tests/cases/match/errors/match-enum-bool-payload-literal-nonexhaustive.ari
enum MaybeBool {
  Empty,
  Flag(bool),
}

fn main() -> i64 {
  return match Flag(true) {
    Flag(true) => 1,
    Empty => 0,
  };
}
